[package]
name = "query_api"
version = "3.1.0"
edition = "2021"
repository = "https://github.com/kr45732/rust-query-api"
readme = "README.md"

[dependencies]
# Runtime
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

# Serde
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# Database
deadpool-postgres = "0.12.1"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
postgres-types = { version = "0.2.6", features = ["derive", "array-impls"] }

# HTTP
reqwest = { version = "0.11.24", features = ["json", "gzip"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.0"

# Logging
log = "0.4.20"
simplelog = "0.12.2"

# Misc
dashmap = { version = "5.5.3", features = ["serde"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.30"
hematite-nbt = "0.5.2"
base64 = "0.21.7"
regex = "1.10.3"

[profile.release]
codegen-units = 1
debug = true
lto = true
