[package]
name = "query_api"
version = "3.1.0"
edition = "2021"
repository = "https://github.com/kr45732/rust-query-api"
readme = "README.md"

[dependencies]
# Runtime
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

# Serde
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

# Database
deadpool-postgres = "0.13.0"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
postgres-types = { version = "0.2.6", features = ["derive", "array-impls"] }

# HTTP
reqwest = { version = "0.12.0", features = ["json", "gzip"] }
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.1"

# Logging
log = "0.4.21"
simplelog = "0.12.2"

# Misc
dashmap = { version = "6.0.0", features = ["serde"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.30"
hematite-nbt = "0.5.2"
base64 = "0.22.1"
regex = "1.10.4"

[profile.release]
codegen-units = 1
debug = true
lto = true
